# todo-project

./: .dockerignore  .flake8  .gitignore  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  tests.sh
migrations/: env.py
migrations/versions/: 0593c9cda1b8_criado_user_name.py  21294b3c2843_initial.py  7cad5ae57033_.py
postgres/: Dockerfile
tests/: test_main_api.py
todo/: app.py  auth.py  cli.py  config.py  db.py  default.toml  security.py  settings.toml
todo/models/: __init__.py  user.py
todo/routes/: __init__.py  auth.py  user.py
